<resources>
    <string name="app_name">喜士多移动管理</string>
    <string name="app_name2">喜市多移动管理</string>
    <string name="bulletin">1.修复调拨时间记录不全的异常\n2.开放调拨配送维护功能\n</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="account">账户</string>
    <string name="please_edit_account">请输入账户</string>
    <string name="password">密码</string>
    <string name="please_edit_password">请输入密码</string>
    <string name="please_edit_password_by_developer">请输入从开发人员处获得的密码</string>
    <string name="login">登录</string>
    <string name="open_permission">您未开启所需权限，请开启权限！</string>
    <string name="clearData">清空数据</string>
    <string name="clear">清空</string>
    <string name="search">查找</string>
    <string name="loading">加载中，请稍后</string>
    <string name="loadingUp">上拉加载更多</string>
    <string name="in_development">开发中</string>
    <string name="sure">确定</string>
    <string name="edit">编辑</string>
    <string name="done">完成</string>
    <string name="other">其他</string>
    <string name="about">关于</string>
    <string name="declare">申明</string>
    <string name="update">更新</string>
    <string name="refresh">刷新</string>
    <string name="noInternet">网络有问题，请查看联网状态并尝试刷新</string>
    <string name="socketError">请求出错，请重试</string>
    <string name="notFindIP">不能获得IP地址，请检查网络</string>
    <string name="cannt_mobile">不能使用移动网络!请连接门市WIFI!</string>
    <string name="strErrorSql">执行SQL出错</string>
    <string name="system_error">系统错误，请联系开发人员</string>
    <string name="saveDone">保存成功</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="wifi_hints">请确定当前连接的wifi是cstorebp</string>
    <string name="now_wifi">当前链接的wifi为：</string>
    <string name="mobile_network">移动网络</string>
    <string name="not_wifi_name">未获得wifi名</string>
    <string name="day">日</string>
    <string name="last">上一个</string>
    <string name="next">下一个</string>
    <string name="tutorial">教学</string>
    <string name="double_close_tutorial">再按一次关闭教程</string>
    <string name="open_tutorial">开启教程</string>
    <string name="open_tutorial_done">已开启教程！</string>
    <string name="photo">照片</string>
    <string name="unit_price">单价</string>
    <string name="all_price">总金额</string>
    <string name="statistics">汇总</string>
    <string name="di">第</string>
    <string name="qi">期新品</string>
    <string name="add">添加</string>
    <string name="settle">结算</string>
    <string name="not_open_now">暂不开放</string>
    <string name="date">日期：</string>
    <string name="status">状态：</string>
    <string name="cant_bgt_inv">数量不能大于库存</string>
    <string name="qrcode_error">条码错误</string>
    <string name="open_photo">开启相册</string>
    <string name="view_all">查看全部</string>
    <string name="download_apk">发现新版本，正在下载安装包</string>
    <string name="store_photo">商形相机</string>
    <string name="commerce">商业</string>
    <string name="order">订/退货</string>
    <string name="train">培训</string>
    <string name="maintain">维修</string>
    <string name="in_stock">库存管理</string>
    <string name="personnel">人事</string>
    <string name="coi">进销存管理</string>
    <string name="collect">手机收银</string>
    <string name="panorama">全景预览</string>
    <string name="transz">中卫调拨</string>
    <string name="pwdError">密码错误</string>
    <string name="idError">查询不到此帐号</string>
    <string name="savePassword">记住密码:</string>
    <string name="saveId">记住帐号:</string>
    <string name="type_name">类名</string>
    <string name="type_name2">类别：</string>
    <string name="inventory">库存</string>
    <string name="inventory2">库存：</string>
    <string name="tonightCount">今晚到量</string>
    <string name="tonightCount2">今晚到量：</string>
    <string name="todayCount">今日订量</string>
    <string name="todayCount2">今日订量：</string>
    <string name="retry">点击重试</string>
    <string name="price">零售价:￥</string>
    <string name="sell">成本价:￥</string>
    <string name="prompt_qrcode">将二维码/条码放入框内，即可自动扫描</string>
    <string name="prompt_qrcode2">扫描距离远一些更容易扫描成功</string>
    <string name="prompt_code">扫描条形码请正对条形码扫描</string>
    <string name="noMessage">未查询到内容</string>
    <string name="original_sales">原始订量：</string>
    <string name="original_sales2">原始订量</string>
    <string name="real_count">实际订量：</string>
    <string name="real_count2">实际订量</string>
    <string name="maxTNoAdd">已到当前类别最大订量，不能添加</string>
    <string name="maxCNoAdd">已到当前商品最大订量，不能添加</string>
    <string name="minTNoLess">已到当前类别最小订量，不能减少</string>
    <string name="minCNoLess">已到当前商品最小订量，不能减少</string>
    <string name="idorname">品号/品名</string>
    <string name="tomorrow_count">(明日到量)</string>
    <string name="acquired_count">(后天到量)</string>
    <string name="please_edit_ctb">请输入要搜索的品号或品名</string>
    <string name="editValue">修改项目值</string>
    <string name="noEditMsg">无修改数据</string>
    <string name="contract_order">承包商品订货</string>
    <string name="contract_order_toview">承包商品修改一览表</string>
    <string name="category_order">大类订货</string>
    <string name="shelf_order">货架订货</string>
    <string name="unit_order">单品订货</string>
    <string name="new_order">促销品及新品订货</string>
    <string name="supplies_order">自用品订货</string>
    <string name="edit_sky">修改sku\n/sku总量</string>
    <string name="usa_time">使用时间在每天14点到18点期间， \n如此时间内无数据请联系开发人员。</string>
    <string name="maxOrMinError">最大量或最小量数据异常</string>
    <string name="duplicateData">存在重复数据</string>
    <string name="all_sku">可订商品数</string>
    <string name="ord_qty">已订品项数</string>
    <string name="ord_count">已订商品数</string>
    <string name="order_price">已订货金额</string>
    <string name="order_sell">已订货成本</string>
    <string name="expected_count">预计强配：</string>
    <string name="on_the_way">在途：</string>
    <string name="tomorrow">明日预测：</string>
    <string name="today_arrival">今日到货：</string>
    <string name="tomorrow_arrival">明日到货：</string>
    <string name="face_qty">排面量：</string>
    <string name="shelf_name">货架名</string>
    <string name="no_edit_msg">无修改数据</string>
    <string name="self_value">自用品项目</string>
    <string name="nop_value">促销品及新品项目</string>
    <string name="promotion">促销品</string>
    <string name="loadingCall">请耐心等候操作完成，预计时间5分钟</string>
    <string name="wait_loading">请耐心等候运行结束</string>
    <string name="noSaveMessage">无要保存的数据</string>
    <string name="fresh1">即期鲜食订货</string>
    <string name="fresh2">其他鲜食订货</string>
    <string name="under_order">一键下单</string>
    <string name="dms">DMS：</string>
    <string name="dma">DMA：</string>
    <string name="scrap">报废</string>
    <string name="scrap1">一般商品报废</string>
    <string name="scrap2">热食报废</string>
    <string name="submit_scrap">提交报废信息</string>
    <string name="freshGroup">群组</string>
    <string name="mrk_count">报废数量</string>
    <string name="mrk_time">报废时间为0:00~23:00，现在不能进行报废操作</string>
    <string name="all_scrap_count">总报废品项：</string>
    <string name="all_scrap_price">总报废金额：</string>
    <string name="scrap_mid_category">品类</string>
    <string name="scrap_count">报废品项数</string>
    <string name="scrap_price">报废金额</string>
    <string name="all_scrap_hot_count">热食总报废品项：</string>
    <string name="all_scrap_hot_price">热食总报废金额：</string>
    <string name="cash_daily">现金日报</string>
    <string name="purchase_acceptance">进货验收</string>
    <string name="please_edit_value">请输入值</string>
    <string name="trsQuantity">到货量:</string>
    <string name="dlvQuantity">验收量:</string>
    <string name="dlv_more_trs">验收量不能大于到货量！</string>
    <string name="huanri">正在换日，不能操作！</string>
    <string name="huanri_error">换日失败，请停止操作并联系系统部！</string>
    <string name="acceptance_id">配送单号：</string>
    <string name="vendor">配送商：</string>
    <string name="order_count">品项数：</string>
    <string name="dlv_count">验收项：</string>
    <string name="order_quantity">订货数量：</string>
    <string name="dlv_quantity">验收数量：</string>
    <string name="cost_total">含税成本：</string>
    <string name="retail_total">零售小计：</string>
    <string name="confirm_acceptance">确认验收</string>
    <string name="commodity_id">品号：</string>
    <string name="commodity_name">品名：</string>
    <string name="dc_quantity">配送商出货量：</string>
    <string name="trs_quantity">到货量：</string>
    <string name="hq_quantity">强配量：</string>
    <string name="tax_sell_cost">含税单价：</string>
    <string name="retail">零售价：</string>
    <string name="please_edit_id">请输入品号</string>
    <string name="please_edit_store">请输入店号</string>
    <string name="please_edit_dlv">请输入验收量</string>
    <string name="create_acceptance">创建验收项</string>
    <string name="return_purchase_acceptance">退货验收</string>
    <string name="return_item_qty">实退项：</string>
    <string name="return_qty">实退总数：</string>
    <string name="ord_return_qty">预退总数：</string>
    <string name="edit_search_item_id">输入要查询的品号</string>
    <string name="return_quantity">实退数：</string>
    <string name="pre_quantity">预退数：</string>
    <string name="returnQuantity">退货量：</string>
    <string name="curr_stock_quantity">实际库存：</string>
    <string name="act_stock_quantity">账上库存：</string>
    <string name="inventory_adjustment">库存调整</string>
    <string name="isNotNull">值不能为空！</string>
    <string name="zero_error">营业换日失败，请停止操作并联系系统部！</string>
    <string name="check_in">签到</string>
    <string name="attendance">考勤</string>
    <string name="attendance_record">考勤记录</string>
    <string name="scheduling">排班</string>
    <string name="access">出入</string>
    <string name="edit_user_id">请输入工号</string>
    <string name="cnt_not_use">非承包店不能使用此功能!</string>
    <string name="ordinary_check">普通签到</string>
    <string name="night_check">大夜签到</string>
    <string name="unitSearch">单品查询</string>
    <string name="point">盘点</string>
    <string name="return_purchase">一般预约退货</string>
    <string name="return_id">退货单号：</string>
    <string name="return_date">退货验收日：</string>
    <string name="lsjjhlj">历史净进货累计：</string>
    <string name="reason">原因：</string>
    <string name="plnrtn_quantity">预退数</string>
    <string name="cash_receipt">现金付款</string>
    <string name="rtn_qty_inv">退货数不能超过库存</string>
    <string name="return_recent">最近可退</string>
    <string name="return_long">长期可退</string>
    <string name="judgment_inv">检查库存</string>
    <string name="confirm_data">确认选中资料</string>
    <string name="return_expired">过期品预约退货</string>
    <string name="ord_contract">已订商品一览表</string>
    <string name="return_expired1">预约退货新增</string>
    <string name="return_expired2">预约退货查询</string>
    <string name="all">全部</string>
    <string name="check2">督导已确认</string>
    <string name="check3">已上传总部</string>
    <string name="check4">总部已确定</string>
    <string name="check5">总部审核未通过</string>
    <string name="jhl">进货量：</string>
    <string name="xsl">销售量：</string>
    <string name="return_count">退货数：</string>
    <string name="return_sql1">已过期失效</string>
    <string name="return_sql01">涨包漏气</string>
    <string name="return_sql02">凹罐</string>
    <string name="return_sql03">破包</string>
    <string name="return_sql04">品质不良</string>
    <string name="return_sql05">临近保质期</string>
    <string name="return_sql06">过期</string>
    <string name="return_sql07">停售</string>
    <string name="return_sql08">顾客投诉(先行提报采购)</string>
    <string name="return_sql09">其它</string>
    <string name="return_sql10">特殊需求退货</string>
    <string name="return_sql11">预约退货</string>
    <string name="return_sql12">1清场品</string>
    <string name="return_sql13">2新/专案</string>
    <string name="return_sql14">3返品</string>
    <string name="return_sql15">4啤酒</string>
    <string name="return_sql16">5总部紧急召回</string>
    <string name="return_sql17">未设定</string>
    <string name="please_edit_money">请输入收款金额</string>
    <string name="collect_money">现金收款</string>
    <string name="confirm_refund">确认退款</string>
    <string name="refund_money">现金退款</string>
    <string name="pay_error1">无法得到商户订单号</string>
    <string name="delete_error_pay_data">清空交易异常数据</string>
    <string name="conn_bluetooth">连接蓝牙打印机</string>
</resources>