<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_bluetooth"
            android:icon="@drawable/ic_bluetooth"
            android:title="@string/conn_bluetooth"
            />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/clearData"/>
        <item
            android:id="@+id/nav_open_tutorial"
            android:icon="@drawable/ic_tutorial"
            android:title="@string/open_tutorial"/>
        <item
            android:id="@+id/nav_delete_sql"
            android:icon="@drawable/ic_delete"
            android:title="@string/delete_error_pay_data"/>
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/about"/>
            <item
                android:id="@+id/nav_update"
                android:visible="true"
                android:icon="@drawable/ic_menu_declare"
                android:title="@string/update"/>
        </menu>
    </item>

</menu>
