<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
<LinearLayout
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UselessParent">
    <include
        layout="@layout/toolbar_layout"/>

    <LinearLayout
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_cash_daily_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/acceptance_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center|bottom"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/acceptance_order_id"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:imeOptions="actionSearch"
            android:layout_height="wrap_content"
            android:hint="@string/please_edit_id"
            android:inputType="number"/>

        <Button
            android:text="@string/sure"
            android:background="@drawable/bg_cash_daily_dialog"
            android:id="@+id/acceptance_sure"
            android:layout_width="wrap_content"
            android:layout_height="40dp"/>
    </LinearLayout>

    <View
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/add_less"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:id="@+id/acceptance_create_data"
        android:orientation="vertical"
        android:animateLayoutChanges="true"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/commodity_id"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="16sp"
                android:id="@+id/commodity_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/commodity_name"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textSize="16sp"
                android:id="@+id/commodity_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/tax_sell_cost"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textSize="16sp"
                android:id="@+id/tax_sell_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/retail"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textSize="16sp"
                android:id="@+id/retail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="8dp"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="16sp"
                android:text="@string/dlv_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:textSize="14sp"
                android:id="@+id/dlv_quantity"
                android:maxLength="4"
                android:imeOptions="actionDone"
                android:hint="@string/please_edit_dlv"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <View
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/add_less"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
    </LinearLayout>

</LinearLayout>

    <Button
        android:id="@+id/acceptance_save"
        android:text="@string/save"
        android:textSize="18sp"
        android:visibility="gone"
        android:animateLayoutChanges="true"
        android:background="@color/contract_sure"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <include
        layout="@layout/loading_layout"/>


</FrameLayout>