<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="18sp" />

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/trs_text"
                android:text="@string/trsQuantity"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:id="@+id/trs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_edit_value"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dlv_text"
                android:text="@string/dlvQuantity"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:id="@+id/dlv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_edit_value"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@color/orange"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>

        <Button
            android:id="@+id/dialog_save"
            android:textColor="@color/white"
            android:background="@color/orange"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/save" />

    </LinearLayout>

</LinearLayout>