<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/hot_item"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginStart="3dp"
    android:layout_marginEnd="3dp"
    android:background="@color/white"
    android:orientation="horizontal"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackground"
    android:stateListAnimator="@drawable/lift_on_touch"
    android:focusable="true">

    <TextView
        android:id="@+id/scrap_hot_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/scrap_mid_category"
        android:textSize="14sp"/>

    <View
        android:background="@color/windowBackground"
        android:layout_width="1dp"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/scrap_hot_count"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/scrap_count"
        android:textSize="14sp"/>

    <View
        android:background="@color/windowBackground"
        android:layout_width="1dp"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/scrap_hot_price"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/scrap_price"
        android:textSize="14sp"/>

</LinearLayout>